updated spacing so buttons show up correctly

--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,7 @@ table.dataTable tr {
 .top-40 {
   margin-top:40px;
 }
+
+.top-100 {
+	margin-top:100px;
+}
